small visual changes

--- a/ENTP_Project/Views/App/CreateMeal.cshtml
+++ b/ENTP_Project/Views/App/CreateMeal.cshtml
@@ -8,6 +8,8 @@
     <style>
         body {
             background-color: rgb(35, 35, 35);
+            background-image: url("https://www.healthyeating.org/images/default-source/home-0.0/nutrition-topics-2.0/general-nutrition-wellness/2-2-2-3foodgroups_fruits_detailfeature_thumb.jpg?sfvrsn=7abe71fe_4");
+            background-size: cover;
         }
 
         .center-content {
