--- a/ENTP_Project/Views/App/CreateWorkout.cshtml
+++ b/ENTP_Project/Views/App/CreateWorkout.cshtml
@@ -10,6 +10,8 @@
     <style>
         body {
             background-color: rgb(35, 35, 35);
+            background-image: url("https://pyxis.nymag.com/v1/imgs/78d/701/cae23671cda082ca36a23be8ad5f7aba91-adjustable-weights-048-final.rsquare.w700.jpg");
+            background-size: cover;
         }
 
         .center-content {
