got the Meals to work

--- a/ENTP_Project/Views/App/CreateMeal.cshtml
+++ b/ENTP_Project/Views/App/CreateMeal.cshtml
@@ -120,7 +120,7 @@
             </div>
 
             <div class="input">
-                <h2>Dietary Restriction:</h2>
+                <h2>Dietary Plan:</h2>
                 <select name="Diet" required>
                     <option selected="selected" value="None">None</option>
                     <option value="Vegetarian">Vegetarian</option>
