got workouts to work, got the delete function to work. next is the edit function

--- a/ENTP_Project/Views/App/CreateWorkout.cshtml
+++ b/ENTP_Project/Views/App/CreateWorkout.cshtml
@@ -112,7 +112,7 @@
 </head>
 <body>
 
-    <form class="center-content" asp-action="WorkoutModel" method="post">
+    <form class="center-content" asp-action="PostWorkout" method="post">
         <div class="section">
             <h1>Profile Change Form</h1>
 
