--- a/ENTP_Project/Views/App/Meals.cshtml
+++ b/ENTP_Project/Views/App/Meals.cshtml
@@ -35,7 +35,7 @@
             .container img {
                 width: 100%; 
                 max-width: 90%; 
-                max-height: 50%; 
+                max-height: 40%; 
                 text-align: center;
                 background-position: center;
                 object-fit: contain; 
@@ -61,7 +61,7 @@
         }
 
         .create {
-            background-color: rgb(102,178,255);
+            background-color: dodgerblue;
             margin: 20px 20px 0px 20px;
             font-size: 20px;
             font-weight: bold;
@@ -79,8 +79,9 @@
 
             .button-container a {
                 text-decoration: none;
-                color: black;
-                padding: 0px 3px;
+                color: white;
+                font-size: 18px;
+                padding:2px 10px;
             }
 
         .btn {         
@@ -121,7 +122,12 @@
                         <button style="background-color:deepskyblue; float: left; padding: 12px 24px; font-weight: bold;" class="btn"><i class="fa fa-plus"></i> Add</button>
                         @if (ViewData["UserRole"]?.ToString() == "Coach/Trainer" || ViewData["UserRole"]?.ToString() == "Admin")
                         {
-                            <button style="background-color: red;" class="btn"><i class="fa fa-trash"></i></button>
+                            <form method="post" asp-action="DeleteMeal" asp-route-id="@meal.Id" style="display: inline;">
+                                <button style="background-color: red;" class="btn" onclick="return confirm('Are you sure you want to delete this meal?');">
+                                    <i class="fa fa-trash"></i>
+                                </button>
+                            </form>
+                          
                             <button style="background-color: dodgerblue;" class="btn"><i class="fa fa-edit"></i></button>
 
                         }
