--- a/ENTP_Project/Views/App/Profile.cshtml
+++ b/ENTP_Project/Views/App/Profile.cshtml
@@ -56,16 +56,15 @@
             }
 
             .section .a_link {
-                box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-                
+                box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);                
                 border-radius: 20px;
                 font-size: 20px;
                 font-weight: bold;
-                background-color: rgb(102,178,255);
-                color: rgb(30,30,30);
+                background-color: dodgerblue;
+                color: white;
                 text-decoration: none;
                 border: 1px black;
-                padding: 5px;
+                padding: 2px 10px;
             }
     </style>
 </head>
@@ -82,8 +81,11 @@
             <h3><b>Dietary Restriction:</b>  @Model.Diet</h3>
             <h3><b>Fitness Plan:</b>  @Model.Plan</h3>
             <h3 style="border-width:1px 0px 1px 0px; margin-bottom: 30px;"><b>Weight: </b> @Model.Weight lbs</h3>
-            <a style="margin:40px;" class="a_link" href="/App/ProfileChange">Edit Profile</a>
+            <form method="get" asp-action="ProfileChange" asp-route-id="@Model.Id">
+                <button style="margin:40px;" class="a_link">Edit Profile</button>
+            </form>
         </div>
     </div>
 </body>
 </html>
+s
