--- a/ENTP_Project/Views/Shared/_AppLayout.cshtml
+++ b/ENTP_Project/Views/Shared/_AppLayout.cshtml
@@ -86,10 +86,10 @@
                 <a class="navbar-brand" href="/">Super Body Fitness</a>
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a  href="/App/Workouts" class="nav-link text-bright">Workouts</a>
+                        <a  href="/Workouts/Workouts" class="nav-link text-bright">Workouts</a>
                     </li>
                     <li class="nav-item">
-                        <a  class="nav-link text-bright" href="/App/Meals">Meal Plans</a>
+                        <a  class="nav-link text-bright" href="/Meals/Meals">Meal Plans</a>
                     </li>
                     <li class="nav-item">
                         <a href="/App/Chat" class="nav-link text-bright">Chat</a>
