--- a/ENTP_Project/Views/Workouts/Workouts.cshtml
+++ b/ENTP_Project/Views/Workouts/Workouts.cshtml
@@ -102,7 +102,7 @@
             <div class="button-container">
                 @if (ViewData["UserRole"]?.ToString() == "Coach/Trainer" || ViewData["UserRole"]?.ToString() == "Admin")
                 {
-                    <a href="/App/CreateWorkout" class="create">Create New Workout</a>
+                    <a href="/Workouts/CreateWorkout" class="create">Create New Workout</a>
                 }
             </div>
             
@@ -112,20 +112,23 @@
                     <div class="container">
                         <h1>@workout.Title</h1>
                         <img src="@workout.ImageUrl" alt="Workout image" />
-                        <h3>Instructor: @workout.Instructor</h3>
-                        <h3>Difficulty: @workout.Difficulty</h3>
-                        <h3>Plan: @workout.Plan</h3>
+                        <h3><b>Instructor: </b>@workout.Instructor</h3>
+                        <h3><b>Difficulty: </b> @workout.Difficulty</h3>
+                        <h3><b>Plan: </b>@workout.Plan</h3>
                         <div class="buttons">
                          <button style="background-color:deepskyblue; float: left; padding: 12px 24px; font-weight: bold;" class="btn"><i class="fa fa-plus"></i> Add</button>
                             @if (ViewData["UserRole"]?.ToString() == "Coach/Trainer" || ViewData["UserRole"]?.ToString() == "Admin")
                             {
+                                <form method="get" asp-action="EditWorkout" asp-route-id="@workout.Id" style="display:inline;">
+                                    <button style="background-color: dodgerblue;" class="btn">
+                                        <i class="fa fa-edit"></i>
+                                    </button>
+                                </form>
                                 <form method="post" asp-action="DeleteWorkout" asp-route-id="@workout.Id" style="display: inline;">
                                     <button style="background-color: red;" class="btn" onclick="return confirm('Are you sure you want to delete this workout?');">
                                         <i class="fa fa-trash"></i>
                                     </button>
                                 </form>
-                                <button style="background-color: dodgerblue;" class="btn"><i class="fa fa-edit"></i></button>
-
                             }
                         </div>
                     </div>
