some visual changes, fixing some crud ops, and working on the chat function

--- a/ENTP_Project/Views/App/Profile.cshtml
+++ b/ENTP_Project/Views/App/Profile.cshtml
@@ -18,7 +18,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh; 
+            height: auto; 
         }
 
         .section {
@@ -53,6 +53,7 @@
             .section h1 {
                 font-size: 36px;
                 font-weight: bold;
+                text-align: center;
             }
 
             .section .a_link {
