--- a/ENTP_Project/Views/Workouts/Workouts.cshtml
+++ b/ENTP_Project/Views/Workouts/Workouts.cshtml
@@ -31,10 +31,12 @@
             }
 
             .container img {
-                width: 100%; 
+                width: 100%;
+                height: 50%;
                 max-width: 90%;
                 max-height: 50%; 
                 object-fit: contain; 
+                text-align: center;
                 border-radius: 8px; 
                 margin-top: 10px;
             }
