--- a/ENTP_Project/Views/App/Chat.cshtml
+++ b/ENTP_Project/Views/App/Chat.cshtml
@@ -1,75 +1,99 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿
 @{
     Layout = "~/Views/Shared/_AppLayout.cshtml";
 }
 
 <html>
-    <head>
-        <style>
-            .section {
-                display: flex;
-                flex-direction: row;
-                justify-content: flex-start;
-                align-items: stretch;
-                align-content: stretch;
-                flex-wrap: nowrap;
-                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            }
+<head>
+    <meta charset="utf-8" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"/>
+    <style>
+        .section {
+            display: flex;
+            height: 100vh;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        }
 
-            .list {
-                width: 33.3%;
-                margin: 1px;
-                border: 1px solid #ddd;
-                box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-                height: 100vh;
-            }
+        .list {
+            width: 33.3%;
+            margin: 1px;
+            border: 1px solid #ddd;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+        }
 
-            .chat {
-                width: 66.6%;
-                height: 100vh;
-                margin: 1px;
-                border: 1px solid #ddd;
-                box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);        
-            }
+        .chat {
+            width: 100%;
+            margin: 1px;
+            border: 1px solid #ddd;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            
+        }
 
-            h1 {
-                justify-content: center;
-                text-align: center;
-                font-size: 25px;
-                margin: 30px 0px 15px 0px;
-            }
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
 
-            .list label {
-                font-size: 20px;
-                margin: 10px;
-            }
-            .list select {
-                font-size: 20px;
-                width: auto;
-                margin: 3px;
-                border-radius: 10px;
-                border: 1px solid #ddd;
-                box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);           
-                padding: 0px 7px 0px 0px;
+        #chatBox {
+            flex-grow: 1;
+            overflow-y: auto;
+            padding: 10px;
+            border-top: 1px solid #ddd;
+        }
 
-            }
-        </style>
-    </head>
-    <body>
-        <div class="section">
-            <div class="list">
-                <h1>Messages</h1>
-                <label for="options">Sort by:</label>
-                <select id="options" name="options">
-                    <option value="recent">Most Recent</option>
-                    <option value="name">Name</option>      
-                </select>
-            </div>
+        #message {
+            width: 80%;
+            padding: 10px;
+        }
+
+        #sendButton {
+            padding: 10px 20px;
+        }
+
+        .messaging {
+            bottom: 0px;
+        }
+
+        .textin {
+            width: 90%
+        }
+
+        .sending {
+            width: 9.9%;
+        }
+
+    </style>
+</head>
+<body>
+    <div class="section">
+        <div class="list">
+            <h1>Messages</h1>
+            <label for="options">Sort by:</label>
+            <select id="options" name="options">
+                <option value="recent">Most Recent</option>
+                <option value="name">Name</option>
+            </select>
+        </div>
+
+        <div class="chat">
+            <h1>Chat Room</h1>
+            
             <div class="chat">
-                <h1>Person</h1>
+                <div class="col-12">
+                    <ul id="Messages">
+                    </ul>
+                </div>
+            </div>
+            <div class="messaging">
+                <input class="textin" type="text" value="" id="Message" placeholder="Enter your message" />
+                <button class="sendin" id="SendMessage" type="button">Send</button>
             </div>
         </div>
-    </body>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/8.0.7/signalr.min.js" integrity="sha512-7SRCYIJtR6F8ocwW7UxW6wGKqbSyqREDbfCORCbGLatU0iugBLwyOXpzhkPyHIFdBO0K2VCu57fvP2Twgx1o2A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="/js/signalr.js"></script>
+</body>
 </html>
