trying to get the library function to work

--- a/ENTP_Project/Views/App/Chat.cshtml
+++ b/ENTP_Project/Views/App/Chat.cshtml
@@ -54,14 +54,16 @@
         }
 
         .messaging {
-            bottom: 0px;
+            
         }
 
         .textin {
-            width: 90%
+            width: 90%;
+            bottom: 0;
         }
 
         .sending {
+            bottom: 0;
             width: 9.9%;
         }
 
