--- a/ENTP_Project/Views/Meals/EditMeal.cshtml
+++ b/ENTP_Project/Views/Meals/EditMeal.cshtml
@@ -111,7 +111,7 @@
 
     <form class="center-content" asp-action="EditMeal" method="post">
         <div class="section">
-            <h1>Meal Creation</h1>
+            <h1>Edit Meal</h1>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="input">
                 <h2>Meal Title:</h2>
