--- a/ENTP_Project/Views/Workouts/EditWorkout.cshtml
+++ b/ENTP_Project/Views/Workouts/EditWorkout.cshtml
@@ -114,7 +114,7 @@
 
     <form class="center-content" asp-action="EditWorkout" method="post">
         <div class="section">
-            <h1>Profile Change Form</h1>
+            <h1>Edit Workout</h1>
 
             <div class="input">
                 <h2>Workout Title:</h2>
