--- a/ENTP_Project/Views/Meals/CreateMeal.cshtml
+++ b/ENTP_Project/Views/Meals/CreateMeal.cshtml
@@ -112,7 +112,7 @@
 
     <form class="center-content" asp-action="PostMeal" method="post">
         <div class="section">
-            <h1>Meal Creation</h1>
+            <h1>Create Meal</h1>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="input">
                 <h2>Meal Title:</h2>
