--- a/ENTP_Project/Views/Meals/Meals.cshtml
+++ b/ENTP_Project/Views/Meals/Meals.cshtml
@@ -33,8 +33,8 @@
         }
 
             .container img {
-                width: 100%; 
-                max-width: 90%; 
+                width: 80%; 
+                max-width: 80%; 
                 max-height: 40%; 
                 text-align: center;
                 background-position: center;
@@ -99,6 +99,18 @@
         .buttons {
             text-align: right;
         }
+
+        .image-link {
+            display: block; 
+            width: 100%; 
+        }
+
+            .image-link img {
+                width: 100%; 
+                height: 100%; 
+                object-fit: cover;
+                border-radius: 8px;
+            }
     </style>
 </head>
 <body>
@@ -114,12 +126,13 @@
             {
                 <div class="container">
                     <h1>@meal.Title</h1>
-                    <img src="@meal.ImageUrl" alt="Workout image" />
-                    <h3><b>Created by: </b></h3>
+                    <a href="@Url.Action("ViewMeal", "Meals", new { mealId = meal.Id })" class="image-link">
+                        <img src="@meal.ImageUrl" alt="meal image" />
+                    </a>
                     <h3><b>Dietary Plan: </b>@meal.Diet</h3>
                     <h3><b>Plan: </b>@meal.Plan</h3>
                     <div class="buttons">
-                        <form>
+                        <form method="post" asp-action="AddToLibrary" asp-route-id="@meal.Id">
                             <button style="background-color:deepskyblue; float: left; padding: 12px 24px; font-weight: bold;" class="btn btn-add" data-meal-id="@meal.Id"><i class="fa fa-plus"></i> Add</button>
                         </form>                        
                         @if (ViewData["UserRole"]?.ToString() == "Coach/Trainer" || ViewData["UserRole"]?.ToString() == "Admin")
@@ -141,7 +154,7 @@
         </div>
     </div>
     <script>
-        async function addToLibrary(mealId) {
+       /* async function addToLibrary(mealId) {
             try {
                 const response = await fetch(`/Meals/AddMealToLibrary?mealId=${mealId}`, {
                     method: 'POST',
@@ -167,7 +180,7 @@
                 const mealId = this.dataset.mealId;
                 addToLibrary(mealId);
             });
-        }); 
+        });  */
     </script>
 </body>
 </html>
