--- a/ENTP_Project/Views/Meals/ViewMeal.cshtml
+++ b/ENTP_Project/Views/Meals/ViewMeal.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model ENTP_Project.Models.MealModel
 @{
     Layout = "~/Views/Shared/_AppLayout.cshtml";
 }
@@ -7,7 +7,7 @@
         <style>
             
             body{
-                background-color: rgb(35, 35, 35);
+                background-color: rgb(148, 71, 91);
             }
 
             .section {
@@ -36,12 +36,18 @@
             }
 
             .content img {
-                width: 100%;
-                max-width: 90%;
-                max-height: 50%;
+                max-width: 80%;
+                max-height: 40%;
                 object-fit: contain;
                 border-radius: 8px;
                 margin-top: 10px;
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                width: 80%;
+                height: 40%;
+                border: 1px solid black;
+                box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
             }
 
             .content h1 {
@@ -49,8 +55,9 @@
                 font-weight: bold;
             }
 
-            .content p, h3 {
+            .content p, h3, pre {
                 text-align: left;
+                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
                 font-size: 22px;
             }
         </style>
@@ -58,11 +65,12 @@
     <body>
         <div class="section">
             <div class="content">
-                <h1>Meal Title</h1>
-                <img src="https://limbuscompany.wiki.gg/images/thumb/6/62/False_Apple_Idle_Sprite.png/579px-False_Apple_Idle_Sprite.png" alt="apple" />
-                <h3 style="margin-top: 25px;">For Users with ___ (diet)</h3>
-                <h3>Plan: </h3>
-                <p>Description/Steps/Recipe</p>
+                <h1>@Model.Title</h1>
+                <img src="@Model.ImageUrl" alt="apple" />
+                <h3 style="margin-top: 25px;"><b>Diet:</b>  @Model.Diet</h3>
+                <h3><b>Plan:</b>  @Model.Plan</h3>
+                <h3><b>Description: </b></h3>
+                <pre>@Model.Description</pre>
             </div>
         </div>
     </body>
