--- a/ENTP_Project/Views/Workouts/CreateWorkout.cshtml
+++ b/ENTP_Project/Views/Workouts/CreateWorkout.cshtml
@@ -111,7 +111,7 @@
 
     <form class="center-content" asp-action="PostWorkout" method="post">
         <div class="section">
-            <h1>Workout Creation</h1>
+            <h1>Create Workout</h1>
 
             <div class="input">
                 <h2>Workout Title:</h2>
