--- a/ENTP_Project/Views/Workouts/ViewWorkout.cshtml
+++ b/ENTP_Project/Views/Workouts/ViewWorkout.cshtml
@@ -6,7 +6,7 @@
     <style>
 
         body {
-            background-color: rgb(35, 35, 35);
+            background-color: rgb(50, 131, 168);
         }
 
         .section {
@@ -36,11 +36,17 @@
 
             .content img {
                 width: 100%;
-                max-width: 90%;
-                max-height: 50%;
+                max-width: 80%;
+                max-height: 40%;
                 object-fit: contain;
                 border-radius: 8px;
                 margin-top: 10px;
+                margin-left: auto;
+                margin-right: auto;
+                width: 80%;
+                height: 40%;
+                border: 1px solid black;
+                box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
             }
 
             .content h1 {
@@ -48,21 +54,23 @@
                 font-weight: bold;
             }
 
-            .content p, h3 {
+            .content p, h3, pre {
                 text-align: left;
                 font-size: 22px;
+                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             }
     </style>
 </head>
 <body>
     <div class="section">
         <div class="content">
-            <h1>Workout Title</h1>
-            <img src="https://limbuscompany.wiki.gg/images/thumb/b/b0/The_King_in_Binds_Idle_Sprite.png/223px-The_King_in_Binds_Idle_Sprite.png" alt="workout" />
-            <h3 style="margin-top: 35px;">Difficulty: </h3>
-            <h3>Instructor: </h3>
-            <h3>Plan: </h3>
-            <p>Description/Steps/Recipe</p>
+            <h1>@Model.Title</h1>
+            <img src="@Model.ImageUrl" alt="workout" />
+            <h3 style="margin-top: 35px;"><b>Difficulty: </b>  @Model.Difficulty</h3>
+            <h3><b>Instructor:  </b>@Model.Instructor</h3>
+            <h3><b>Plan:</b>  @Model.Plan</h3>
+            <h3><b>Description:</b></h3>
+            <pre>@Model.Description</pre>
         </div>
     </div>
 </body>
