--- a/ENTP_Project/Views/Workouts/Workouts.cshtml
+++ b/ENTP_Project/Views/Workouts/Workouts.cshtml
@@ -24,10 +24,8 @@
                 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
                 height: auto;
                 display: flex;
-                flex-direction: column;
-                
-                justify-content: space-between;
-                
+                flex-direction: column;              
+                justify-content: space-evenly;
             }
 
             .container img {
@@ -97,6 +95,18 @@
             .buttons {
                 text-align: right;
             }
+
+        .image-link {
+            display: block;
+            width: 100%;
+        }
+
+            .image-link img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                border-radius: 8px;
+            }
         </style>
     </head>
     <body>
@@ -113,7 +123,9 @@
                 {
                     <div class="container">
                         <h1>@workout.Title</h1>
-                        <img src="@workout.ImageUrl" alt="Workout image" />
+                        <a href="@Url.Action("ViewWorkout", "Workouts", new { workoutId = workout.Id })" class="image-link">
+                            <img src="@workout.ImageUrl" alt="workout image" />
+                        </a>
                         <h3><b>Instructor: </b>@workout.Instructor</h3>
                         <h3><b>Difficulty: </b> @workout.Difficulty</h3>
                         <h3><b>Plan: </b>@workout.Plan</h3>
@@ -138,7 +150,7 @@
             </div>
         </div>
     <script>
-        async function addToLibrary(workoutId) {
+        /*async function addToLibrary(workoutId) {
             try {
                 const response = await fetch(`/Workouts/AddToLibrary?workoutId=${workoutId}`, {
                     method: 'POST',
@@ -164,7 +176,7 @@
                 const workoutId = this.dataset.workoutId;
                 addToLibrary(workoutId);
             });
-        });
+        }); */
     </script>
     </body>
 </html>
