--- a/ENTP_Project/Views/App/Homepage.cshtml
+++ b/ENTP_Project/Views/App/Homepage.cshtml
@@ -118,12 +118,12 @@
                 <label for="thisMonth">This Month</label>
             </div>
             <div class="stats"> <!--the middle container, not planned on finishing until month 2-->
-                <p>Total Calories Burned: </p>
-                <p>Total Steps: </p>
-                <p>Time spent exercising: </p>
-                <p>Weight lost: </p>
-                <p>Workouts completed: </p>
-                <p>Classes completed: </p>
+                <p>Total Calories Burned: 0</p>
+                <p>Total Steps: 0 steps</p>
+                <p>Time spent exercising: 0 min</p>
+                <p>Weight lost: 0 lbs</p>
+                <p>Workouts completed: 0</p>
+                <p>Classes completed: 0</p>
             </div>
         </div>
         <div class="meals">
