--- a/ENTP_Project/Views/App/Homepage.cshtml
+++ b/ENTP_Project/Views/App/Homepage.cshtml
@@ -128,8 +128,7 @@
         </div>
         <div class="meals">
             <h1>Recommended Meals</h1>
-            <p>Could do recommended meals</p>
-            <p>Could do like account information??? Such as diet preference (vegan, carnivore, etc), current weight, etc</p>
+            <p>Non-functional</p>
         </div>
     </div>
 
